[package]
name = "transform_spritesheet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
memmap2 = "0.9"
image = { version = "0.24", default-features = false, features = ["png"] }
glam = { version = "0.24 }
